# bin

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-0BSD  Makefile  README.md  docker-compose.yaml
.github/workflows/: ci.yml
src/: errors.rs  io.rs  main.rs
templates/: base.html  index.html  paste.html
