[package]
name = "bin"
version = "3.0.0"
description = "a paste bin."
repository = "https://github.com/Travus/bin"
license = "WTFPL OR 0BSD"
authors = ["Jordan Doyle <jordan@doyle.la>", "Travus <realtravus@outlook.com>"]
edition = "2021"

[dependencies]
argh = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
linked-hash-map = "0.5"
once_cell = "1.14"
parking_lot = "0.12"
bytes = { version = "1.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8" }
actix = "0.13"
actix-web = "4.0"
htmlescape = "0.3"
askama = "0.11"
bat = "0.20"
syntect = "4.6"
tokio = { version = "1.20", features = ["sync"] }
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
incremental = false

[badges]
travis-ci = { repository = "Travus/bin" }
is-it-maintained-issue-resolution = { repository = "Travus/bin" }
is-it-maintained-open-issues = { repository = "Travus/bin" }
maintenance = { status = "passively-maintained" }
